Fri Aug 07 11:13:19 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Update to reflect *declination with a number not
	  working in 1.2.21.

Fri Aug 07 10:55:42 GMT 2015  Olly Betts <olly@survex.com>

	* src/netartic.c,tests/: Fix assertion if we try to identify a hanging
	  survey by an anonymous station.

Fri Aug 07 10:33:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/: Fix *declination with an angle to actually
	  work.

Tue Jul 28 19:18:37 GMT 2015  Olly Betts <olly@survex.com>

	* src/Makefile.am: Ship thgeomag.h.

Tue Jul 28 19:10:52 GMT 2015  Olly Betts <olly@survex.com>

	* src/Makefile.am: Distribute igrf coefficients file and script to
	  generate C header from it.

Tue Jul 28 18:57:43 GMT 2015  Olly Betts <olly@survex.com>

	* doc/HACKING.htm: Document where the unofficial Innosetup translations
	  came from.

Tue Jul 28 18:57:15 GMT 2015  Olly Betts <olly@survex.com>

	* doc/HACKING.htm: wx2.8-i18n -> wx3.0-i18n.

Tue Jul 28 18:56:46 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Jul 28 18:35:03 GMT 2015  Olly Betts <olly@survex.com>

	* src/datain.c: Add FIXME for actually looking at clino readings in
	  diving data.

Tue Jul 28 18:23:07 GMT 2015  Olly Betts <olly@survex.com>

	* doc/aven.sgml: Document the command line options.  Reported by Jenny
	  Black.

Tue Jul 28 18:17:51 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Point to '*case' and '*truncate' from the 'SEE ALSO'
	  sections of each other.

Tue Jul 28 18:17:16 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Fix broken markup introduced by recent changes.

Tue Jul 28 15:55:23 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Jul 28 15:54:05 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Next release will be 1.2.21 not 1.2.22.

Tue Jul 28 15:52:31 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml,src/commands.c,tests/: Allow the units for the zero